# fraiseql-validators

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  build.rs  test_figi_lei.sh
.github/workflows/: ci.yml  publish.yml
.phases/: README.md  phase-01-foundation.md  phase-02-contact.md  phase-03-financial-banking.md  phase-04-financial-securities.md  phase-05-barcodes.md  phase-06-identifiers.md  phase-07-geographic.md  phase-08-network.md  phase-09-finalize.md
data/: iana_language_subtags.txt  iso10383_mic.csv  iso3166_countries.csv  iso4217_currencies.csv
src/: barcodes.rs  checksum.rs  contact.rs  financial_banking.rs  financial_securities.rs  fraiseql_bridge.rs  geographic.rs  identifiers.rs  lib.rs  network.rs
tests/: barcodes.rs  contact.rs  contract.rs  crate_exists.rs  financial_banking.rs  financial_securities.rs  geographic.rs  helpers.rs  identifiers.rs  network.rs  validation_error.rs
