[package]
name = "fraiseql-validators"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["contact", "financial_banking", "financial_securities", "barcodes", "identifiers", "geographic", "network"]
contact = []
financial_banking = []
financial_securities = []
barcodes = []
identifiers = []
geographic = []
network = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "warn"

[dependencies]
regex-lite = "0.1"
once_cell = { version = "1.0", features = ["alloc", "std"], default-features = false }

[build-dependencies]
# none