[package]
name = "fraiseql-validators"
version = "0.1.0"
edition = "2021"
description = "A no_std library for validating various financial and contact identifiers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/fraiseql-validators"
readme = "README.md"
keywords = ["validation", "identifiers", "finance", "contact"]
categories = ["data-structures", "parsing"]

[lib]
path = "src/lib.rs"

[features]
default = ["contact", "financial_banking", "financial_securities", "barcodes", "identifiers", "geographic", "network"]
contact = []
financial_banking = []
financial_securities = []
barcodes = []
identifiers = []
geographic = []
network = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "warn"

[dependencies]
regex-lite = "0.1"
once_cell = { version = "1.0", features = ["alloc", "std"], default-features = false }

[build-dependencies]
csv = "1.3"